--- a/styles/projects.css
+++ b/styles/projects.css
@@ -21,6 +21,7 @@
 .project {
   display: flex;
   flex-direction: column;
+  margin-bottom: 1em;
 }
 .flex-option a {
   text-decoration: none;
