--- a/styles/resume.css
+++ b/styles/resume.css
@@ -24,3 +24,8 @@ p {
   float: left;
   font-weight: bold;
 }
+#pdf {
+  position: fixed;
+  top: 100px;
+  right: 100px;
+}
